--- a/config/const.example
+++ b/config/const.example
@@ -18,3 +18,5 @@ define("PATH_APP",     $_SERVER['DOCUMENT_ROOT'].PROJECT."/app");
 define("PATH_ASSETS",     $_SERVER['DOCUMENT_ROOT'].PROJECT."/assets");
 define("PATH_CONFIG",     $_SERVER['DOCUMENT_ROOT'].PROJECT."/config");
 define("PATH_VENDOR",     $_SERVER['DOCUMENT_ROOT'].PROJECT."/vendor");
+
+date_default_timezone_set('america/caracas');
