--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "twbs/bootstrap-icons": "^1.13",
         "phpoffice/phpspreadsheet": "^1.29",
-        "mpdf/mpdf": "^8.2"
+        "mpdf/mpdf": "^8.2",
+        "fabpot/goutte": "^4.0"
     }
 }
