--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "twbs/bootstrap-icons": "^1.13",
         "phpoffice/phpspreadsheet": "^1.29",
         "mpdf/mpdf": "^8.2",
-        "fabpot/goutte": "^4.0"
+        "fabpot/goutte": "^4.0",
+        "phpmailer/phpmailer": "^6.10"
     }
 }
